--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,21 +76,25 @@ dependencies {
     implementation "io.insert-koin:koin-annotations:$koin_ksp_version"
     ksp "io.insert-koin:koin-ksp-compiler:$koin_ksp_version"
 
-    //ktor
-    implementation "io.ktor:ktor-client-android:$ktor_version"
-    implementation "io.ktor:ktor-client-core:$ktor_version"
-    implementation("io.ktor:ktor-client-cio:$ktor_version")
-
     //nav
     implementation 'io.github.raamcosta.compose-destinations:animations-core:1.8.35-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.8.35-beta'
     //system ui controller
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.29.1-alpha"
     //supabase
+    implementation("io.ktor:ktor-client-cio:$ktor_version")
+
+
+
 
     implementation(platform("io.github.jan-tennert.supabase:bom:$supabase_kt_version"))
     implementation("io.github.jan-tennert.supabase:gotrue-kt")
     implementation("io.github.jan-tennert.supabase:postgrest-kt-android:$supabase_kt_version")
+
+    //dataStore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    //exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.6'
 
     //exposed
 //    implementation("org.jetbrains.exposed:exposed-core:$exposed_version")
