--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.LinguaFlow"
         tools:targetApi="31">
         <activity
+            android:screenOrientation="landscape"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
