--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id("com.google.devtools.ksp") version "1.8.10-1.0.9"
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
-
+    id 'kotlinx-serialization'
 }
 apply plugin: 'com.google.devtools.ksp'
 
@@ -83,9 +82,6 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.29.1-alpha"
     //supabase
     implementation("io.ktor:ktor-client-cio:$ktor_version")
-
-
-
 
     implementation(platform("io.github.jan-tennert.supabase:bom:$supabase_kt_version"))
     implementation("io.github.jan-tennert.supabase:gotrue-kt")
